[package]
name = "renaissance"
version = "0.1.0"
edition = "2021"
authors = ["railgun <onlytherailgun@starcryptotech.com>"]
description = "CEX aggregator for algorithmic trading"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = { version = "3.0.13", features = ["derive"] }
rust_decimal = "1.15.0"
rust_decimal_macros = "1.15.0"
tokio = { version = "1.15.0", features = ["full"] }
renaissance_token = { path = "../renaissance_token" }
